--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-register.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-register.html
@@ -126,6 +126,7 @@
                             <span class="input-group-btn">
                                 <button data-duplicate-remove="int-ip" class="btn btn-success" type="button"><i class="fa fa-minus"></i></button>
                             </span>
+
                         </div>
                     </div>
 
@@ -140,6 +141,11 @@
                                 <button data-duplicate-remove="ext-ip" class="btn btn-success" type="button"><i class="fa fa-minus"></i></button>
                             </span>
                         </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <p class="help-block">If host directly exposed, add external IP also here</p>
                     </div>
                 </div>
 
