--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-complete.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-complete.html
@@ -33,7 +33,7 @@
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <i class="fa fa-thumbs-up"></i> Installation is complete! <a th:href="${dashboardUrl}">Please click here to navigate to the dashboard</a>
+                    <i class="fa fa-thumbs-up"></i> Data entry is complete! Click <a th:href="${dashboardUrl}">here</a> to navigate to the dashboard.
                 </div>
             </div>
         </div>
