--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/updates.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/updates.html
@@ -26,11 +26,11 @@
     <div class="row">
         <div class="col-md-12">
             <div id="toolbar" class="btn-group pull-right">
-                <a th:href="${addCspUrl}" class="btn btn-primary"><i class="glyphicon glyphicon-refresh"></i> Click here to check again</a>
+                <a href="#" id="checkAgain" class="btn btn-primary"><i class="glyphicon glyphicon-refresh"></i> Click here to check again</a>
             </div>
             <table id="updates-table"
                    data-toggle="table"
-                   th:attr="data-url=${dataCspUrl}"
+                   th:attr="data-url=${updatesRetrieveUrl}"
                    data-cache="false"
                    data-query-params="queryParams"
                    data-pagination="true"
@@ -45,44 +45,15 @@
                    data-buttonsAlign="left">
                 <thead>
                 <tr>
-                    <th data-field="icon" data-align="center"></th>
                     <th data-field="name" data-sortable="true">Name</th>
                     <th data-field="description" data-sortable="true">Description</th>
-                    <th data-field="versionAvailable" data-sortable="true">Version Available</th>
+                    <th data-field="version" data-sortable="true">Version Available</th>
                     <th data-field="versionInstalled" data-sortable="true">Version Installed</th>
-                    <th data-field="releaseDate" data-sortable="true">Release Date</th>
+                    <th data-field="released" data-sortable="true">Release Date</th>
+                    <th data-field="hash" data-sortable="false" data-visible="false">hash</th>
                     <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>base</td>
-                    <td>base images</td>
-                    <td>1.0.002</td>
-                    <td>1.0.001</td>
-                    <td>12/7/2017 10:30:22</td>
-                    <td><a href="status.html"><i class="glyphicon glyphicon-download-alt"></i> Install now</a></td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>misp</td>
-                    <td>misp install v21.12</td>
-                    <td>21.12.000</td>
-                    <td>20.0.000</td>
-                    <td>12/7/2017 10:30:22</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>viper</td>
-                    <td>viper v12.0</td>
-                    <td>12.0</td>
-                    <td>11.112</td>
-                    <td>12/7/2017 10:30:22</td>
-                    <td></td>
-                </tr>
-                </tbody>
             </table>
         </div>
     </div>
