--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/manage.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/manage.html
@@ -19,7 +19,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="page-header"><i class="fa fa-cog"></i> Manage <span th:text="${cspName}"></span></h2>
+            <h2 class="page-header"><i class="fa fa-cog"></i> Manage <span th:text="${cspName}"></span> (<span th:text="${cspId}"></span>)</h2>
         </div>
     </div>
 
