added certificates (tested) and smtp details

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/fragments.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/fragments.html
@@ -26,6 +26,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap-fileinput/4.4.0/css/fileinput.min.css}"/>
 
     <!-- Favicon -->
     <link rel="shortcut icon" th:href="@{/assets/fav/favicon.ico}"/>
