--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/fragments.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/fragments.html
@@ -69,6 +69,9 @@
         <li th:class="${navUpdatesClassActive}"><a th:href="${updatesUrl}">
             <i class="fa fa-download "></i> Updates</a>
         </li>
+        <li th:class="${navSystemClassActive}"><a th:href="${systemUrl}">
+            <i class="fa fa-hdd-o "></i> System</a>
+        </li>
         <li th:class="${navContactClassActive}"><a th:href="${contactUrl}" target="_blank">
             <i class="fa fa-comment-o "></i> Contact Us</a>
         </li>
