--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/status.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/status.html
@@ -58,7 +58,7 @@
         <div class="col-md-12">
             <div class="error-log">
                 <img th:src="@{/assets/img/ajax-loader.gif}"/>
-                <div id="scroll">
+                <div id="scroll" style="font-family: 'DejaVu Sans Mono', monospace; font-size: 0.8em; ">
                     <!-- Use class bootstrap labels -->
                 </div>
             </div>
