--- a/csp-apps/anonymization/anon-server/src/main/resources/templates/fragments.html
+++ b/csp-apps/anonymization/anon-server/src/main/resources/templates/fragments.html
@@ -54,7 +54,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user"></span>&nbsp;
-                    <strong>admin</strong>
+                    <strong th:if="${user!=null}" th:text="${user.username}">admin</strong>
                     <span class="glyphicon glyphicon-chevron-down"></span>
                 </a>
                 <ul class="dropdown-menu">
@@ -67,7 +67,7 @@
                                     </p>
                                 </div>
                                 <div class="col-lg-8">
-                                    <p class="text-left">admin</p>
+                                    <p th:if="${user!=null}" class="text-left" th:text="${user.username}">admin</p>
                                     <p class="text-left">
                                         <strong> </strong>
                                     </p>
@@ -82,7 +82,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <p>
-                                        <a href="#" class="btn btn-danger btn-block">Logout</a>
+                                        <a href="/logout/" class="btn btn-danger btn-block">Logout</a>
                                     </p>
                                 </div>
                             </div>
