--- a/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/navbar.html
+++ b/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/navbar.html
@@ -24,7 +24,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-user"></span>&nbsp;
-                            <strong>admin</strong>
+                            <strong th:if="${user!=null}" th:text="${user.username}">admin</strong>
                             <span class="glyphicon glyphicon-chevron-down"></span>
                         </a>
                         <ul class="dropdown-menu">
@@ -37,7 +37,7 @@
                                             </p>
                                         </div>
                                         <div class="col-lg-8">
-                                            <p class="text-left">admin</p>
+                                            <p th:if="${user!=null}" class="text-left" th:text="${user.username}">admin</p>
                                             <p class="text-left">
                                                 <strong> </strong>
                                             </p>
