--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/updates.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/updates.html
@@ -26,7 +26,8 @@
     <div class="row">
         <div class="col-md-12">
             <div id="toolbar" class="btn-group pull-right">
-                <a href="#" id="checkAgain" class="btn btn-primary"><i class="glyphicon glyphicon-refresh"></i> Click here to check again</a>
+                <a href="#" id="checkAgain" class="btn btn-primary"><i class="fa fa-refresh"></i> Click here to check again</a>
+                <a href="#" th:href="${statusUrl}" id="systemlogs" class="btn btn-primary"><i class="fa fa-history"></i> See the system log</a>
             </div>
             <table id="updates-table"
                    data-toggle="table"
