--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/system.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/system.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title='Updates', description='dashboard description')"></head>
+<head th:replace="fragments::head(title='System Status', description='dashboard description')"></head>
 
 <body>
 
@@ -26,7 +26,8 @@
     <div class="row">
         <div class="col-md-12">
             <div id="toolbar" class="btn-group pull-right">
-                <a href="#" id="checkAgain" class="btn btn-primary"><i class="glyphicon glyphicon-refresh"></i> Click here to check again</a>
+                <a href="#" id="start" class="btn btn-success"><i class="fa fa-play fa-2"></i> Start</a>
+                <a href="#" id="stop" class="btn btn-danger"><i class="fa fa-stop fa-2"></i> Stop</a>
             </div>
             <table id="updates-table"
                    data-toggle="table"
@@ -45,13 +46,11 @@
                    data-buttonsAlign="left">
                 <thead>
                 <tr>
-                    <th data-field="name" data-sortable="true">Name</th>
-                    <th data-field="description" data-sortable="true">Description</th>
-                    <th data-field="version" data-sortable="true">Version Available</th>
-                    <th data-field="versionInstalled" data-sortable="true">Version Installed</th>
-                    <th data-field="released" data-sortable="true">Release Date</th>
-                    <th data-field="hash" data-sortable="false" data-visible="false">hash</th>
-                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
+                    <th data-field="name" data-sortable="false">Name</th>
+                    <th data-field="currentState" data-sortable="false">Current State</th>
+                    <th data-field="startable" data-sortable="false">Can start?</th>
+                    <th data-field="startPriority" data-sortable="true">Priority</th>
+                    <th data-field="version" data-sortable="false">Version</th>
                 </tr>
                 </thead>
             </table>
@@ -65,7 +64,8 @@
 
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //var ASYNC_INTERVAL = [[${asyncInterval}]];
+    var systemCanStart = [[${canStart}]];
+    var systemCanStop = !systemCanStart;
     /*]]>*/
 </script>
 
