fixes and start stop complete

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/status.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/status.html
@@ -31,8 +31,9 @@
 
     <div class="row">
         <div class="col-md-6">
-            <div style="padding-top: 5px;">
-                <a th:href="${updatesUrl}" class="save btn btn-default">Return to updates list</a>
+            <div class="btn-group pull-left">
+                <a th:href="${updatesUrl}" class="save btn btn-default"><i class="fa fa-download"></i> Back to Updates</a>
+                <a th:href="${systemUrl}" class="save btn btn-default"><i class="fa fa-hdd-o"></i> Back to System</a>
             </div>
         </div>
         <div class="col-md-6">
