Aestehtic update on IL-UI, when saving a row

--- a/csp-apps/integration-layer/il-server/src/main/resources/templates/home.html
+++ b/csp-apps/integration-layer/il-server/src/main/resources/templates/home.html
@@ -106,7 +106,7 @@
                                 <th>Actions</th>
                             </tr>
                             </thead>
-                            <tr th:id="${policy.id}" th:each="policy,iterStat: ${policies}">
+                            <tr th:id="${policy.id}" th:each="policy,iterStat: ${policies}" th:class="${id != null and id == policy.id? 'table-success success':''}">
                                 <!--/*<td th:text="${iterStat.count}"></td>*/-->
                                 <td th:text="${policy.id}"></td>
                                 <td th:text="${policy.integrationDataType}"></td>
