warnings implemented for the registration process

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/fragments.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/fragments.html
@@ -24,6 +24,12 @@
     <!-- Bootstrap Table -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap-table/1.9.1-1/bootstrap-table.min.css}"/>
 
+
+    <!-- Bootstrap Dialog -->
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap3-dialog/1.35.3/dist/css/bootstrap-dialog.min.css}"/>
+
+
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap-fileinput/4.4.0/css/fileinput.min.css}"/>
